UI contrast and font fixes

--- a/src/components/discardButton/discard_style.less
+++ b/src/components/discardButton/discard_style.less
@@ -5,11 +5,11 @@
 	float: left;
 }
 .overlay button{
+	background: white;
 	position: absolute;
 	left: 5px;
 	bottom: 5px;
 	height: 70px;
 	width: 100px;
 	padding-right: 10px;
-	border: 3px solid red;
 }
