--- a/src/components/submitButton/submit_style.less
+++ b/src/components/submitButton/submit_style.less
@@ -11,5 +11,4 @@
 	height: 70px;
 	width: 100px;
 	padding-right: 10px;
-	border: 3px solid green;
 }
